# inception

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev-gpu.yml  docker-compose.dev.yml  docker-entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini  test.yml
.github/: lint.yml  test.yml
.github/workflows/: docker-build.yml  lint.yml  test.yml
inception/: config.py  embed_endpoint.py  embedding_service.py  main.py  metrics.py  schemas.py  utils.py
inception/routes/: __init__.py  embedding.py  monitoring.py
tests/: conftest.py  test_embedding_service.py  test_monitoring.py
