[project]
name = "inception"
version = "2.0.0"
description = "A high-performance FastAPI service for generating text embeddings"
authors = [
    {name = "Free Law Project", email = "info@free.law"},
]
readme = "README.md"

requires-python = ">=3.12,<3.13"


dependencies = [
    "fastapi<1.0.0,>=0.104.1",
    "uvicorn[standard]<1.0.0,>=0.24.0",
    "sentence-transformers<4.0.0,>=3.0.0",
    "transformers<5.0.0,>=4.48.0",
    "pydantic<3.0.0,>=2.4.2",
    "pydantic-settings<3.0.0,>=2.0.3",
    "nltk<4.0.0,>=3.8.1",
    "numpy<2.3.0,>=1.26.1",
    "gunicorn<22.0.0,>=21.2.0",
    "prometheus-client<1.0.0,>=0.19.0",
    "sentry-sdk[fastapi]>=1.32.0,<3.0.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.5.1",
]
gpu = [
  "torch>=2.5.1",
]

[tool.uv]
conflicts = [
    [
      { extra = "cpu" },
      { extra = "gpu" },
    ],
]
package = true

[tool.uv.sources]
torch = [
  { index = "torch-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.7.0",
    "pytest<8.0.0,>=7.4.3",
    "pytest-cov<5.0.0,>=4.1.0",
    "httpx<1.0.0,>=0.25.1",
    "flake8<7.0.0,>=6.1.0",
    "pytest-mock<4.0.0,>=3.12.0",
    "pytest-asyncio<1.0.0,>=0.21.1",
    "pre-commit<5.0.0,>=4.0.1",
    "flynt<2.0.0,>=1.0.1",
    "isort<6.0.0,>=5.13.2",
    "black<25.0.0,>=24.10.0",
]



[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
       \.eggs
    | .*\.egg-info
    | \.git
    | \.venv
    | __pycache__
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
